<resources>
    <string name="app_name">Rephraser</string>
    <string name="original_txt">Original Text</string>
    <string name="loginSignup">Login/Signup</string>
    <string name="profile">Profile</string>
    <string name="subscription_plan">Subscription Plan</string>
    <string name="billing">Billing</string>
    <string name="history">History</string>
    <string name="privacyPolicy">Privacy Policy</string>
    <string name="moreApps">More Apps</string>
    <string name="reteUs">Rate Us</string>
    <string name="supportUs">Support</string>
    <string name="logOut">Logout</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nothingToShow">Nothing to show</string>
    <string name="notingToShowDes">abcdefghijklmopqrstuvwxyzANCDEFGIJKLMNOPQRSTUVWXYZ</string>
    <string name="extractFile">Extract File</string>
    <string name="extractFromPdf">Extract form pdf</string>
    <string name="extractFromDocx">Extract From Docx</string>
    <string name="pasteText">Paste Text</string>
    <string name="my_document">My Document</string>
    <string name="wordCount">word count:</string>
    <string name="totalWords">/ 500</string>
    <string name="writtenWordstxt">Word Count:</string>
    <string name="writtenWords">0</string>
    <string name="rephrasedText">Paraphrased Text</string>
    <string name="quickModes">Quick Modes</string>
    <string name="fluency">Fluency</string>
    <string name="standard">Standard</string>
    <string name="creative">Creative</string>
    <string name="generate">Generate</string>
    <string name="rephrase">Rephrase</string>
    <string name="nameFile">Name File</string>
    <string name="enterName">Enter Name</string>
    <string name="enterTit">Enter Title</string>
    <string name="enterDesc">Enter Description</string>
    <string name="saveAs">Save as</string>
    <string name="wordFile">Word File</string>
    <string name="pdfFile">PDF File</string>
    <string name="clickToPasteText">Click to paste text</string>
    <string name="contactSupport">Contact Support</string>
    <string name="name">Name</string>
    <string name="eMail">Email</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="sendQuery">Send Query</string>
    <string name="resultHere">Result will be shown here</string>
    <string name="recentlyRephrased">Recently Rephrased</string>
    <string name="savedFiles">Saved Files</string>
    <string name="cancel">Cancel</string>
    <string name="thanks_for_liking">Thanks for liking our App!</string>
    <string name="the_best_we_can_get">The best we can get</string>
    <string name="ratingArrow">Rating arrow</string>
    <string name="star">Star</string>
    <string name="rate_us_on_google">Rate us on google play</string>
    <string name="emoji">Emoji</string>
    <string name="oops">Oops</string>
    <string name="we_like_you_too">We like you too!</string>
    <string name="johndoe">Enter Name</string>
    <string name="johndoeEmail">johndoe123@gmail.com</string>
    <string name="something">Something something</string>
    <string name="docName">Enter file name</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="dzmapps">apps@dzinemedia.com</string>
    <string name="permission_required">Permission Required</string>
    <string name="this_permission_is_required_to_run_this_application">This permission is required to run this application.</string>
    <string name="ok">Ok</string>
    <string-array name="modesArray" translatable="false">
        <item>General</item>
        <item>Fluency</item>
        <item>Academic</item>
        <item>Blog</item>
        <item>Formal</item>
    </string-array>
    <string name="loading_ad">Advertisement</string>
    <string name="loading_ad_please">Ad is loading please wait</string>
    <string name="share">Share</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="export">Export</string>
    <string name="save_file">Saved Files</string>
    <string name="please_wait">Please wait…</string>
    <string name="upload">Upload</string>
    <string name="download">Download</string>
    <string name="Your_opinion_matters_to_us">Your opinion matters to us!</string>
    <string name="Give_us_a_quick_review"><![CDATA[Give us a quick review and help us to improve]]></string>
    <string name="exit">Exit</string>
    <string name="Rate_us">Rate Us</string>
    <string name="empty">0000</string>
    <string name="rephraseParagraph">Rephrase Paragraph</string>
    <string name="articleGenerator">Article Generator</string>
    <string name="grammarChecker">Grammar Checker</string>
    <string name="summarize">Summarize</string>
    <string name="rephraser">Rephraser</string>
    <string name="artical_gen">Artical Generator</string>
    <string name="enterKeyword">Enter Keyword to generate arical</string>
    <string name="artical">Artical</string>
    <string name="fix_issues">Fix Issues</string>
    <string name="check_grammar">Check Grammar</string>
    <string name="original">Original Text</string>
    <string name="summarized">Summarized Text</string>
    <string name="dummy_name_hint">Mark Jefferson</string>
    <string name="dummy_date_hint">01/01/2001</string>
    <string name="dummy_email_hint">Enter email</string>
    <string name="dummy_phone_hint">+49 5785253498</string>
    <string name="dummy_card_hint">0000 0000 0000 0000</string>
    <string name="password_hint">Enter password</string>
    <string name="newPassword_hint">Enter confirm password</string>
    <string name="EnternewPassword_hint">Enter new Password</string>
    <string name="extract_text_from_text">Extract text from Text File</string>
    <string name="sign_in">Sign in</string>
    <string name="log_in">Log in</string>
    <string name="login">log in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">Or</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="dont_have_acc">Don\'t have an account?</string>
    <string name="or_continue">Or continue</string>
    <string name="didnot_recieve_code">Didn\'t recieve code?</string>
    <string name="resend_code">Resend code</string>
    <string name="sign_up">Sign up</string>
    <string name="Without_login">Without Login</string>
    <string name="termAndConditiont1">By signing up, you agree to our</string>
    <string name="termAndConditionTxt">Terms and Conditions</string>
    <string name="termAndConditiont2">and</string>
    <string name="join_us_before">Join us before?</string>
    <string name="emialtext">Email</string>
    <string name="back_to_login">Back to Login</string>
    <string name="enter_your_mail">Enter your email</string>
    <string name="enter_mail_desc">Enter the email associated with your account and we’ll send an email with instructions to reset your password.</string>
    <string name="email_address">Email address</string>
    <string name="enter_verification_code">Enter verification code</string>
    <string name="enter_code_desc">Enter the reset password verification code we just sent to your email</string>
    <string name="verification_code_here">Enter verification code here!</string>
    <string name="reset_pass">Reset password</string>
    <string name="must_contain_8_char">Must contain at least 8 characters.</string>
    <string name="staric">********</string>
    <string name="change_password">Change password</string>
    <string name="change_password_desc"><![CDATA[Type old password first and then type the password of your choice & confirm it]]></string>
    <string name="old_password">Old Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="confirm_password_hint">Enter confirm password</string>
    <string name="select_subscription">Select Subscription</string>
    <string name="three_days_free">3 days free</string>
    <string name="payment_method">Payement Method</string>
    <string name="card_details">Card Details</string>
    <string name="card_holder_name">Card holder name</string>
    <string name="card_number">Card number</string>
    <string name="expiry_date">Expiry date</string>
    <string name="cvc">CVC</string>
    <string name="dummy_cvc_hint">000</string>
    <string name="pm1">By</string>
    <string name="pm2">proceeding</string>
    <string name="pm3">with your order placement, you formally</string>
    <string name="acknowledge_that_you_are_purchasing_from">acknowledge that you are purchasing from</string>
    <string name="stripe">STRIPE,</string>
    <string name="global">global</string>
    <string name="payment">payment</string>
    <string name="gateway">Gateway</string>
    <string name="a">a</string>
    <string name="subscribe_now">Subscribe Now</string>
    <string name="horray">Hoorayy! Thank you for \n your purchase.</string>
    <string name="doted_line">_ _ _ _ _ _ _ _ _ _ _ _ _</string>
    <string name="planType">Plan Type</string>
    <string name="totalAmount">Total Amount Paid</string>
    <string name="backToHome">Back to Home</string>
    <string name="paid">Paid</string>
    <string name="totalWordsTxt">Total Words</string>
    <string name="free_plan">Free Plan</string>
    <string name="for3Days">For 3 Days</string>
    <string name="free_plan_value">$0.00</string>
    <string name="first_name">First name</string>
    <string name="first_name_hint">Enter first name</string>
    <string name="last_name">Last name</string>
    <string name="last_name_hint">Enter last name</string>
    <string name="mobile_number">Mobile number</string>
    <string name="mobile_number_hint">Enter phone number</string>
    <string name="verify_email_text">Please verify email to get 3 days unlimited tools access!</string>
    <string name="are_you_sure_you">Are you sure you want to cancel your subscription?</string>
    <string name="upgrade_to_premium">Upgrade to Premium!</string>
    <string name="verify_now">Verify Now</string>
    <string name="verify">Verify Email</string>
    <string name="get_verification_code">Get Verification Code</string>
    <string name="sent_otp">Sent otp</string>
    <string name="email">Email</string>
    <string name="update">Update</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="preview">Preview</string>
    <string name="search_hint">Seach here</string>
    <string name="unlock_all_features">Unlock all Features</string>
    <string name="buy_the_plan_that_suits_your_pocket_amp_get_our_services_with_unlimited_rephrasing"><![CDATA[Buy the plan that suits your pocket & get our services with unlimited rephrasing.]]></string>
    <string name="_19_95_3_month">$19.95/3 month</string>
    <string name="yearly_plan">Yearly Plan</string>
    <string name="quarterly_plan">Quarterly Plan</string>
    <string name="monthly_plan">Monthly Plan</string>
    <string name="_8_95_per_month">$6.95 /week</string>
    <string name="for_t_days">For 3 Days</string>
    <string name="upload_file">Upload File</string>
    <string name="save_file_as">Save file as</string>
    <string name="fileName">File name</string>
    <string name="subscription_type">Subscription Type</string>
    <string name="renewal_on">Renewal On</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>