<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ContactSupportFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headerConstraintLay"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@drawable/main_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/csBack"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:background="@drawable/back"
            android:src="@drawable/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/csText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:text="@string/contactSupport"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/csBack"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerConstraintLay">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headerConstraintLay">


            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/sofia_pro_semi_bold_az"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/cs_et_bg_blue_color"
                android:hint="@string/enterName"
                android:inputType="text"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/_5sdp"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name" />

            <TextView
                android:id="@+id/eMail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/sofia_pro_semi_bold_az"
                android:text="@string/eMail"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etName" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/cs_et_bg_blue_color"
                android:editable="false"
                android:hint="@string/johndoeEmail"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/_5sdp"
                android:text="@string/dzmapps"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/eMail" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/sofia_pro_semi_bold_az"
                android:text="@string/title"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etEmail" />

            <EditText
                android:id="@+id/etTitle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/cs_et_bg_blue_color"
                android:hint="@string/enterTit"
                android:inputType="text"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/_5sdp"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title" />


            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/sofia_pro_semi_bold_az"
                android:text="@string/description"
                android:textColor="@color/app_color"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etTitle" />


            <EditText
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_35sdp"
                android:background="@drawable/cs_desc_et_bg"
                android:fontFamily="@font/sofia_pro_regular_az"
                android:gravity="start"
                android:padding="@dimen/_5sdp"
                android:hint="@string/enterDesc"
                android:inputType="textMultiLine"
                android:minHeight="@dimen/_140sdp"
                android:overScrollMode="always"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sendQuery"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_30sdp"

                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:background="@drawable/mian_button_bg"
                android:drawableTint="@color/transparent"
                android:fontFamily="@font/sofia_pro_medium_az"
                android:text="@string/sendQuery"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etDescription" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>