<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".fragments.EnterMailForgotPassword">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/enterMailLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_30sdp"
                android:src="@drawable/ic_forgotpass_enter_email_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                android:fontFamily="@font/sofia_pro_semi_bold_az"
                android:text="@string/enter_your_mail"
                android:textColor="@color/black"
                android:textSize="@dimen/_18ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:fontFamily="@font/sofia_pro_regular_az"
                android:text="@string/enter_mail_desc"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/emailRelLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/enterMailLL"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_25sdp">

            <TextView
                android:id="@+id/enterMailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_2sdp"
                android:fontFamily="@font/sofia_pro_semi_bold_az"
                android:text="@string/email_address"
                android:textColor="@color/app_color"
                android:textSize="@dimen/_11ssp" />

            <EditText
                android:id="@+id/enterMailET"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_below="@+id/enterMailText"
                android:layout_marginTop="@dimen/_12sdp"
                android:background="@drawable/cs_et_bg_blue_color"
                android:hint="@string/dummy_email_hint"
                android:maxLines="1"
                android:paddingStart="@dimen/_5sdp"
                android:scrollHorizontally="true"
                android:textColor="@color/black" />

        </RelativeLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/getVerificationCodeBtn"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_below="@+id/emailRelLay"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/generate_bg_selector"
            android:fontFamily="@font/sofia_pro_medium_az"
            android:text="@string/sent_otp"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </RelativeLayout>
</ScrollView>