<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/_20sdp"
    android:layout_marginEnd="@dimen/_20sdp"
    android:background="@drawable/bottom_sheet_button_bg"
    android:orientation="vertical"
    tools:context=".fragments.DialogFragmentMainScr">


    <ImageView
        android:id="@+id/headerbg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_140sdp"
        android:src="@drawable/blue_bg" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/cancel_subscription_icon" />

    <ImageView
        android:id="@+id/cross_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:src="@drawable/cancel_red_icon"
        android:visibility="gone" />


    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/headerbg"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:fontFamily="@font/sofia_pro_regular_az"
        android:gravity="center"
        android:text="@string/are_you_sure_you"
        android:textSize="@dimen/_12sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_below="@+id/text"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:orientation="horizontal"
        android:weightSum="2">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/yesBtn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_40sdp"
            android:layout_below="@+id/text"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_weight="1"
            android:background="@drawable/btn_enable_red"
            android:fontFamily="@font/sofia_pro_medium_az"
            android:text="@string/yes"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:backgroundTint="@color/yes_btn_clr"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/noBtn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_40sdp"
            android:layout_below="@+id/text"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_weight="1"
            android:background="@drawable/generate_bg_selector"
            android:fontFamily="@font/sofia_pro_medium_az"
            android:text="@string/no"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>


</RelativeLayout>